--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -42,9 +42,38 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\Standard.cs" />
+    <Compile Include="Core\Actor.cs" />
+    <Compile Include="Core\Directions.cs" />
+    <Compile Include="Core\Monster.cs" />
+    <Compile Include="Core\Exit.cs" />
+    <Compile Include="Core\Item.cs" />
+    <Compile Include="Core\LevelGrid.cs" />
+    <Compile Include="Core\ObjectType.cs" />
+    <Compile Include="Core\Player.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="Interfaces\IActor.cs" />
+    <Compile Include="Interfaces\IBehavior.cs" />
+    <Compile Include="Interfaces\IDrawable.cs" />
+    <Compile Include="Interfaces\IItem.cs" />
+    <Compile Include="Items\Armor.cs" />
+    <Compile Include="Items\Bone.cs" />
+    <Compile Include="Items\Book.cs" />
+    <Compile Include="Items\Chest.cs" />
+    <Compile Include="Items\Food.cs" />
+    <Compile Include="Items\Gem.cs" />
+    <Compile Include="Items\Potion.cs" />
+    <Compile Include="Items\Ring.cs" />
+    <Compile Include="Items\Skull.cs" />
+    <Compile Include="Items\Weapon.cs" />
+    <Compile Include="Monsters\Placeholder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Systems\CommandSystem.cs" />
+    <Compile Include="Systems\LevelGenerator.cs" />
+    <Compile Include="Systems\MessageLog.cs" />
+    <Compile Include="Core\UserInputCommands.cs" />
+    <Compile Include="Systems\UserInputKeyboard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -109,14 +138,7 @@
     <None Include="app.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Behaviors\" />
-    <Folder Include="Core\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Items\" />
-    <Folder Include="Monsters\" />
-    <Folder Include="Systems\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
