--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -136,9 +136,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
+    <None Include="Content\MainFont.spritefont" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Content\dknight_1.png" />
+    <Content Include="Content\door_stone_11.png" />
+    <Content Include="Content\door_stone_3.png" />
+    <Content Include="Content\door_stone_4.png" />
+    <Content Include="Content\floor_extra_12.png" />
+    <Content Include="Content\floor_set_grey_8.png" />
+    <Content Include="Content\wall_stone_11.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
