--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\CommandSystem.cs" />
+    <Compile Include="Systems\InventorySystem.cs" />
     <Compile Include="Systems\LevelGenerator.cs" />
     <Compile Include="Systems\MessageLog.cs" />
     <Compile Include="Core\UserInputCommands.cs" />
