--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Items\Ring.cs" />
     <Compile Include="Items\Skull.cs" />
     <Compile Include="Items\Weapon.cs" />
+    <Compile Include="Monsters\Placeholder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\CommandSystem.cs" />
@@ -73,7 +74,6 @@
     <Compile Include="Systems\MessageLog.cs" />
     <Compile Include="Core\UserInputCommands.cs" />
     <Compile Include="Systems\UserInputKeyboard.cs" />
-    <Compile Include="Monsters\Beholder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -138,7 +138,6 @@
     <None Include="app.manifest" />
     <None Include="Content\MainFont.spritefont" />
     <None Include="packages.config" />
-    <None Include="Content\beholder_deep_1.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\dknight_1.png" />
@@ -148,9 +147,6 @@
     <Content Include="Content\floor_extra_12.png" />
     <Content Include="Content\floor_set_grey_8.png" />
     <Content Include="Content\wall_stone_11.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Monsters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
