--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -151,6 +151,7 @@
     <None Include="Content\experience.png" />
     <None Include="Content\dexterity.png" />
     <None Include="Content\constitution.png" />
+    <None Include="Content\player_equipment_gui.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\chest_gold_open.png" />
