--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\CommandSystem.cs" />
+    <Compile Include="Systems\Equipment.cs" />
     <Compile Include="Systems\InventorySystem.cs" />
     <Compile Include="Systems\LevelGenerator.cs" />
     <Compile Include="Systems\MessageLog.cs" />
