--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -13,6 +13,21 @@
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -107,10 +122,12 @@
     <Compile Include="Systems\CommandSystem.cs" />
     <Compile Include="Systems\Equipment.cs" />
     <Compile Include="Systems\InventorySystem.cs" />
+    <Compile Include="Systems\KeyboardStringReader.cs" />
     <Compile Include="Systems\LevelGenerator.cs" />
     <Compile Include="Systems\Credits.cs" />
     <Compile Include="Systems\Leaderboard.cs" />
     <Compile Include="Systems\Instructions.cs" />
+    <Compile Include="Systems\PlayerCreation.cs" />
     <Compile Include="Systems\MainMenu.cs" />
     <Compile Include="Systems\MessageLog.cs" />
     <Compile Include="Core\UserInputCommands.cs" />
@@ -228,7 +245,13 @@
     <Content Include="Content\wraith_a_1.png" />
     <Content Include="Content\zombie_a_1.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
