--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -208,6 +208,7 @@
     <None Include="Content\constitution.png" />
     <None Include="Content\player_equipment_gui.png" />
     <None Include="Content\monster_stats_gui.png" />
+    <None Include="Content\main-menu.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\banshee_1.png" />
