--- a/Capstonia.csproj
+++ b/Capstonia.csproj
@@ -220,6 +220,7 @@
     <None Include="Content\monster_stats_gui.png" />
     <None Include="Content\main-menu.png" />
     <None Include="Content\PressStart2P.spritefont" />
+    <None Include="Content\dark-knight-large.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\banshee_1.png" />
